//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

import "imdatachain_clientbase.proto";

message ImDataChainAgreeFriend {
  ImClientBase    Base           =1;  //
  bytes           TokenLocal     =2;  //自己创建的令牌
  bytes           TokenRemote    =3;  //对方创建令牌
  bytes           DhPukInfo      =4;  //公钥
}
