//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

import "imdatachain_clientbase.proto";

message ImDataChainGroupAccept {
  ImClientBase    Base        =1;  //
  bytes           GroupID     =2;  //
  int64           AcceptTime  =3;  //
  bytes           Sign        =4;  //
  bytes           SignPuk     =5;  //
  bytes           DHPuk       =6;  //
  bytes           Token       =7;  //令牌
  bytes           Nickname         =8;  //好友昵称
  bytes           GroupNickname    =9;  //群昵称
}
